--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: "3.8"
 services:
   mysqldb:
     container_name: database
-    image: mysql:8.0
+    image: mysql:8
     restart: on-failure
     environment:
-      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_ROOT_PASSWORD=superPassword
       - MYSQL_DATABASE=codeseek_football_management
     ports:
-      - "3308:3306"
+      - "3307:3306"
     volumes:
       - ./src/main/resources/initDb.sql:/docker-entrypoint-initdb.d/initDb.sql
     healthcheck:
@@ -17,6 +17,8 @@ services:
       timeout: 7s
       start_period: 6s
       retries: 10
+    networks:
+      - common-network
   app:
     container_name: app
     depends_on:
@@ -25,8 +27,9 @@ services:
     build: .
     restart: on-failure
     ports:
-      - "8081:8080"
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://database:3306/codeseek_football_management
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=root
+      - "8080:8080"
+    networks:
+      - common-network
+networks:
+  common-network:
+    driver: bridge
